# coakka-publish

./: .gitignore  LICENSE.md  README.md  SHA256SUMS  TRADEMARKS.md
.github/workflows/: public-surface.yml
artifacts/: public-artifacts.tsv
docs/: public-artifact-contract.md
docs/releases/: 2026-05-09-runtime-a671b3a.md  2026-05-17-runtime-94a5729.md  2026-05-17-runtime-e2dc43a.md  2026-05-18-runtime-native-c124a9e.md  2026-05-18-runtime-zig-mojo-source-10dc009.md
include/coakka/v2/: client.h  control.h  runtime.h  transport.h  utils.h
logger/csharp/: README.md
logger/csharp/releases/0.1.0+ba2a66d98eb5/: CONSUMING.md  CoAkka.Logger.0.1.0.nupkg  README.md  SHA256SUMS  manifest.json
logger/go/: README.md
logger/go/releases/0.1.0+ba2a66d98eb5/: CONSUMING.md  README.md  SHA256SUMS  manifest.json
logger/jvm/: README.md
logger/native/: README.md
logger/native/package-template/: README.md
logger/native/package-template/examples/: CMakeLists.txt
logger/native/package-template/examples/c/: basic.c
logger/native/package-template/examples/cpp/: basic.cpp
logger/node/: README.md
logger/python/: README.md
logger/rust/: README.md
maven/: README.md
native/macos-aarch64/: libcoakka_runtime_v2.dylib
runtime/native/: README.md
runtime/native/package-template/: README.md
scripts/: scan-public-surface.sh  test-public-artifact-manifest.sh  test-public-surface-scanner.sh  test-runtime-intake-artifact.sh  test-runtime-jvm-native-bundle.sh  verify-public-surface.sh  verify-runtime-intake-artifact.py  verify-runtime-jvm-native-bundle.sh
(+654 files in other folders)
